# grcp

./: README.md  cmake_minimum_required(VERSION 3.cmake
grcp/step1/: CMakeLists.txt
grcp/step1/src/: CMakeLists.txt
grcp/step2/: CMakeLists.txt
grcp/step3/src/client/: CMakeLists.txt
grcp/step3/src/server/: CMakeLists.txt  server.sh
grcp/step4/include/proto/: helloworld.pb.h
grcp/step4/proto/: helloworld.proto
step1/: build.sh  clear.sh
step1/src/: main.cpp
step2/: build.sh  clear.sh
step2/include/proto/: helloworld.grpc.pb.cc
step2/src/: main.cpp
step3/: build.sh
step3/include/proto/: helloworld.grpc.pb.h
step3/src/client/: client.cpp
step3/src/server/: server.cpp
step4/: build.sh
step4/include/proto/: helloworld.pb.cc
step4/src/client/: CMakeLists.txt  client.cpp
step4/src/server/: CMakeLists.txt  server.cpp
step5/app/client/: CMakeLists.txt  client.cpp  client.sh
step5/app/proto/: grpc_service_data.proto  proto.sh
step5/app/server/: CMakeLists.txt  server.cpp  server.sh
step5/app/server/grpc/include/: grpc_interface.h  grpc_position.h  grpc_service.h  grpc_workoffset.h
step5/app/server/grpc/src/: grpc_service.cpp
step5/app/server/include/: service_interface.h
step5/app/server/services/include/: position_service.h  service_factory.h  workoffset_service.h
step5/app/server/services/src/: service_factory.cpp
step5/include/: data_type.h  nc_factory.h  nc_interface.h  nc_position.h
step5/nc/src/: nc_factory.cpp
step6/: build.sh  clear.sh
step6/app/client/: CMakeLists.txt  client.cpp  client.sh
step6/app/include/: grpc_types.h
step6/app/proto/: grpc_service_data.proto
step6/app/server/: CMakeLists.txt  server.cpp  server.sh
step6/app/server/grpc/include/: grpc_factory.h  grpc_interface.h  grpc_position.h  grpc_server.h  grpc_service.h  grpc_workoffset.h
step6/app/server/grpc/src/: grpc_factory.cpp  grpc_server.cpp  grpc_service.cpp
step6/include/: nc_workoffset.h
